--- a/MANUALHTML/filehame.html
+++ b/MANUALHTML/filehame.html
@@ -94,50 +94,70 @@
     <div id="main">
       <h1>Tukubaiオンラインコマンドマニュアル</h1>
 
-      <h2>ネーム形式(5)</h2>
+      <h2>filehame(1)</h2>
 
       <h3>【名前】</h3>
 
-      <p>ネーム形式 : 空白区切りの2フィールドテキストデータ形式</p>
+      <p>filehame : テンプレートにファイルをはめ込み</p>
 
       <h3>【書式】</h3>
 
-      <pre class="list">第1フィールド 第2フィールド
-...</pre>
+      <pre class="list">Usage	: filehame -l&lt;string&gt; &lt;template&gt; &lt;data&gt;
+Version	: Thu Aug  2 14:07:28 JST 2012</pre>
 
       <h3>【説明】</h3>
 
-      <p>空白区切りの2フィールドテキストデータ形式。<a href="field-format.html">フィールド形式(5)</a>の特殊な形式の1つ。第2フィールドに含まれる空白は区切り文字としては解釈されない。ネーム形式のファイルは<a href="name-file.html">ネームファイル</a>と呼ばれる。</p>
-
-      <p><a href="name-file.html">ネームファイル</a>は主にWebフォームの入力内容を保存するために使われる。POSTデータは鍵と値が対になったデータになっており、<a href="cgi-name.html">cgi-name(1)</a>コマンドを使用することでネーム形式へ変換することができる。ネーム形式を使用するコマンドとしてはほかに<a href="check_attr_name.html">check_attr_name(1)</a>や<a href="check_need_name.html">check_need_name(1)</a>などがある。</p>
+      <p>&lt;template&gt;ファイルに含まれる文字列&lt;string&gt;が含まれる行を&lt;data&gt;ファイルの中身に置き換える。</p>
 
       <h3>【例1】</h3>
 
-      <pre class="source">ID 0001
-DATE 20111008
-AGE 23
-GENDER F
-VALUE 0.845814</pre>
+      <pre class="cmd">$ cat template
+&lt;html&gt;
+&lt;meta&gt;
+&lt;!-- label1 --&gt;
+&lt;/meta&gt;
+&lt;body&gt;
+&lt;!-- label2 --&gt;
+&lt;/body&gt;
+&lt;/html&gt;
+$ </pre>
 
-      <h3>【例2】</h3>
+      <pre class="cmd">$ cat data1
+&lt;script type="javascript/text"&gt;
+	function sb(i) {
+		submit(getElementById(i))
+	}
+&lt;/script&gt;
+$ </pre>
 
-      <p>ネーム形式では1つめの空白のみがフィールド区切り文字として認識され、2つめ以降の空白は通常の文字として認識される。</p>
+      <pre class="cmd">$ cat data2
+&lt;input id="123" type="button" onclick=sb('123') value="push" /&gt;
+$ </pre>
 
-      <pre class="source">ID 0000 001
-DATE 2011 10/08
-AGE 23
-GENDER F
-VALUE 1 - 0.845814</pre>
-
-      <p>上記例であれば、1行目の第1フィールドはIDであり、第2フィールドは0000 001となる。</p>
+      <pre class="cmd">
+$ filehame -llabel1 template file1 | filehame -llabel2 - file2
+&lt;html&gt;
+&lt;meta&gt;
+&lt;script type="javascript/text"&gt;
+	function sb(i) {
+		submit(getElementById(i))
+	}
+&lt;/script&gt;
+&lt;/meta&gt;
+&lt;body&gt;
+&lt;input id="123" type="button" onclick=sb('123') value="push" /&gt;
+&lt;/body&gt;
+&lt;/html&gt;
+$
+      </pre>
 
       <h3>【関連項目】</h3>
 
-      <p><a href="cgi-name.html">cgi-name(1)</a>、<a href="check_attr_name.html">check_attr_name(1)</a>、<a href="check_need_name.html">check_need_name(1)</a>、<a href="tag-format.html">タグ形式(5)</a>、<a href="field-format.html">フィールド形式(5)</a>、<a href="name-file.html">ネームファイル(5)</a></p>
+      <p><a href="mojihame.html">mojihame(1)</a></p>
 
     </div>
 
-    <div id="lastmodified">last modified: 2012-08-01 16:19:55</div>
+    <div id="lastmodified">last modified: 2012-08-02 15:03:24</div>
 
     <div id="footer">Contact us: uecinfo@usp-lab.com<br/>Copyright (c) 2012 <a href="http://www.usp-lab.com/">Universal Shell Programming Laboratory</a> All Rights Reserved.</div>
   </div>
