--- a/MANUALHTML/transaction-file.html
+++ b/MANUALHTML/transaction-file.html
@@ -94,46 +94,43 @@
     <div id="main">
       <h1>Tukubaiオンラインコマンドマニュアル</h1>
 
-      <h2>ネーム形式(5)</h2>
+      <h2>トランザクションファイル(5)</h2>
 
       <h3>【名前】</h3>
 
-      <p>ネーム形式 : 空白区切りの2フィールドテキストデータ形式</p>
+      <p>トランザクションファイル : トランザクションの性質を満たす<a href="field-format.html">フィールド形式</a>のファイル</p>
 
       <h3>【書式】</h3>
 
-      <pre class="list">第1フィールド 第2フィールド
+      <pre class="list">第1フィールド 第2フィールド 第3フィールド ...
 ...</pre>
 
       <h3>【説明】</h3>
 
-      <p>空白区切りの2フィールドテキストデータ形式。<a href="field-format.html">フィールド形式(5)</a>の特殊な形式の1つ。第2フィールドに含まれる空白は区切り文字としては解釈されない。ネーム形式のファイルは<a href="name-file.html">ネームファイル</a>と呼ばれる。</p>
+      <p>売上データなど随時データの追加などが実施されるタイプのデータはトランザクションと呼ばれている。トランザクションは短縮してトランと呼ばれることも多い。</p>
 
-      <p><a href="name-file.html">ネームファイル</a>は主にWebフォームの入力内容を保存するために使われる。POSTデータは鍵と値が対になったデータになっており、<a href="cgi-name.html">cgi-name(1)</a>コマンドを使用することでネーム形式へ変換することができる。ネーム形式を使用するコマンドとしてはほかに<a href="check_attr_name.html">check_attr_name(1)</a>や<a href="check_need_name.html">check_need_name(1)</a>などがある。</p>
+      <p><a href="/INFO/CGI/INFO.CGI?POMPA=ABOUTUNICAGE">ユニケージ開発手法</a>では、トランザクションに該当する<a href="field-format.html">フィールド形式</a>のファイルをトランザクションファイルと呼んでいる。</p>
+
+      <p>トランザクションファイルは短縮してトランと呼ばれることがあり、また、<a href="index.html">Tukubaiコマンドマニュアル</a>ではtranと表記される。トランザクションファイルとは対照的にデータ変更のタイミングがあらかじめ定めされており、キーフィールドが重複せずかつ整列されているようなフィールド形式のファイルは<a href="master-file.html">マスタファイル</a>と呼ばれている。</p>
 
       <h3>【例1】</h3>
 
-      <pre class="source">ID 0001
-DATE 20111008
-AGE 23
-GENDER F
-VALUE 0.845814</pre>
+      <p>トランザクションファイルの例は次のとおり。</p>
 
-      <h3>【例2】</h3>
-
-      <p>ネーム形式では1つめの空白のみがフィールド区切り文字として認識され、2つめ以降の空白は通常の文字として認識される。</p>
-
-      <pre class="source">ID 0000 001
-DATE 2011 10/08
-AGE 23
-GENDER F
-VALUE 1 - 0.845814</pre>
-
-      <p>上記例であれば、1行目の第1フィールドはIDであり、第2フィールドは0000 001となる。</p>
+      <pre class="source">20110405 001 13513543
+20110405 002 3403346
+20110406 001 3543024
+20110406 002 12412311
+20110406 003 88797982
+20110407 001 1354131
+20110407 002 12343423
+20110407 003 7657765</pre>
 
       <h3>【関連項目】</h3>
 
-      <p><a href="cgi-name.html">cgi-name(1)</a>、<a href="check_attr_name.html">check_attr_name(1)</a>、<a href="check_need_name.html">check_need_name(1)</a>、<a href="tag-format.html">タグ形式(5)</a>、<a href="field-format.html">フィールド形式(5)</a>、<a href="name-file.html">ネームファイル(5)</a></p>
+      <p><a href="master-file.html">マスタファイル(5)</a>、<a href="name-file.html">ネームファイル(5)</a>、<a href="field-format.html">フィールド形式(5)</a>、<a href="tag-format.html">タグ形式(5)</a>、<a href="name-format.html">ネーム形式(5)</a></p>
+
+      <p class="annotation">※ <a href="/INFO/CGI/INFO.CGI?POMPA=ABOUTUNICAGE">ユニケージ</a>は<a href="http://www.usp-lab.com/">ユニバーサル・シェル・プログラミング研究所</a>の登録商標。</p>
 
     </div>
 
