--- a/MANUALHTML/name-file.html
+++ b/MANUALHTML/name-file.html
@@ -94,11 +94,11 @@
     <div id="main">
       <h1>Tukubaiオンラインコマンドマニュアル</h1>
 
-      <h2>ネーム形式(5)</h2>
+      <h2>ネームファイル(5)</h2>
 
       <h3>【名前】</h3>
 
-      <p>ネーム形式 : 空白区切りの2フィールドテキストデータ形式</p>
+      <p>ネームファイル : <a href="name-format.html">ネーム形式</a>のファイル</p>
 
       <h3>【書式】</h3>
 
@@ -107,9 +107,9 @@
 
       <h3>【説明】</h3>
 
-      <p>空白区切りの2フィールドテキストデータ形式。<a href="field-format.html">フィールド形式(5)</a>の特殊な形式の1つ。第2フィールドに含まれる空白は区切り文字としては解釈されない。ネーム形式のファイルは<a href="name-file.html">ネームファイル</a>と呼ばれる。</p>
+      <p><a href="name-format.html">ネーム形式(5)</a>のファイル。第2フィールドに含まれる空白は区切り文字としては解釈されない。</p>
 
-      <p><a href="name-file.html">ネームファイル</a>は主にWebフォームの入力内容を保存するために使われる。POSTデータは鍵と値が対になったデータになっており、<a href="cgi-name.html">cgi-name(1)</a>コマンドを使用することでネーム形式へ変換することができる。ネーム形式を使用するコマンドとしてはほかに<a href="check_attr_name.html">check_attr_name(1)</a>や<a href="check_need_name.html">check_need_name(1)</a>などがある。</p>
+      <p>ネームファイルは主にWebフォームの入力内容を保存するために使われる。POSTデータは鍵と値が対になったデータになっており、<a href="cgi-name.html">cgi-name(1)</a>コマンドを使用することでネーム形式へ変換することができる。ネーム形式を使用するコマンドとしてはほかに<a href="check_attr_name.html">check_attr_name(1)</a>や<a href="check_need_name.html">check_need_name(1)</a>などがある。</p>
 
       <h3>【例1】</h3>
 
@@ -121,7 +121,7 @@ VALUE 0.845814</pre>
 
       <h3>【例2】</h3>
 
-      <p>ネーム形式では1つめの空白のみがフィールド区切り文字として認識され、2つめ以降の空白は通常の文字として認識される。</p>
+      <p>ネームファイルでは1つめの空白のみがフィールド区切り文字として認識され、2つめ以降の空白は通常の文字として認識される。</p>
 
       <pre class="source">ID 0000 001
 DATE 2011 10/08
@@ -133,7 +133,7 @@ VALUE 1 - 0.845814</pre>
 
       <h3>【関連項目】</h3>
 
-      <p><a href="cgi-name.html">cgi-name(1)</a>、<a href="check_attr_name.html">check_attr_name(1)</a>、<a href="check_need_name.html">check_need_name(1)</a>、<a href="tag-format.html">タグ形式(5)</a>、<a href="field-format.html">フィールド形式(5)</a>、<a href="name-file.html">ネームファイル(5)</a></p>
+      <p><a href="cgi-name.html">cgi-name(1)</a>、<a href="check_attr_name.html">check_attr_name(1)</a>、<a href="check_need_name.html">check_need_name(1)</a>、<a href="tag-format.html">タグ形式(5)</a>、<a href="field-format.html">フィールド形式(5)</a>、<a href="name-format.html">ネーム形式(5)</a></p>
 
     </div>
 
